Don't support "unsigned" property for fields that are not of integer types

BUG:365469